src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_Vector2"][::std::mem::size_of::<Clay_Vector2>() - 8usize];
    ["Alignment of Clay_Vector2"][::std::mem::align_of::<Clay_Vector2>() - 4usize];
    ["Offset of field: Clay_Vector2::x"][::std::mem::offset_of!(Clay_Vector2, x) - 0usize];
    ["Offset of field: Clay_Vector2::y"][::std::mem::offset_of!(Clay_Vector2, y) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_Color {
    pub r: f32,
    pub g: f32,
    pub b: f32,
    pub a: f32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_Color"][::std::mem::size_of::<Clay_Color>() - 16usize];
    ["Alignment of Clay_Color"][::std::mem::align_of::<Clay_Color>() - 4usize];
    ["Offset of field: Clay_Color::r"][::std::mem::offset_of!(Clay_Color, r) - 0usize];
    ["Offset of field: Clay_Color::g"][::std::mem::offset_of!(Clay_Color, g) - 4usize];
    ["Offset of field: Clay_Color::b"][::std::mem::offset_of!(Clay_Color, b) - 8usize];
    ["Offset of field: Clay_Color::a"][::std::mem::offset_of!(Clay_Color, a) - 12usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_BoundingBox {
    pub x: f32,
    pub y: f32,
    pub width: f32,
    pub height: f32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_BoundingBox"][::std::mem::size_of::<Clay_BoundingBox>() - 16usize];
    ["Alignment of Clay_BoundingBox"][::std::mem::align_of::<Clay_BoundingBox>() - 4usize];
    ["Offset of field: Clay_BoundingBox::x"][::std::mem::offset_of!(Clay_BoundingBox, x) - 0usize];
    ["Offset of field: Clay_BoundingBox::y"][::std::mem::offset_of!(Clay_BoundingBox, y) - 4usize];
    ["Offset of field: Clay_BoundingBox::width"]
        [::std::mem::offset_of!(Clay_BoundingBox, width) - 8usize];
    ["Offset of field: Clay_BoundingBox::height"]
        [::std::mem::offset_of!(Clay_BoundingBox, height) - 12usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ElementId {
    pub id: u32,
    pub offset: u32,
    pub baseId: u32,
    pub stringId: Clay_String,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_ElementId"][::std::mem::size_of::<Clay_ElementId>() - 32usize];
    ["Alignment of Clay_ElementId"][::std::mem::align_of::<Clay_ElementId>() - 8usize];
    ["Offset of field: Clay_ElementId::id"][::std::mem::offset_of!(Clay_ElementId, id) - 0usize];
    ["Offset of field: Clay_ElementId::offset"]
        [::std::mem::offset_of!(Clay_ElementId, offset) - 4usize];
    ["Offset of field: Clay_ElementId::baseId"]
        [::std::mem::offset_of!(Clay_ElementId, baseId) - 8usize];
    ["Offset of field: Clay_ElementId::stringId"]
        [::std::mem::offset_of!(Clay_ElementId, stringId) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_CornerRadius {
    pub topLeft: f32,
    pub topRight: f32,
    pub bottomLeft: f32,
    pub bottomRight: f32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_CornerRadius"][::std::mem::size_of::<Clay_CornerRadius>() - 16usize];
    ["Alignment of Clay_CornerRadius"][::std::mem::align_of::<Clay_CornerRadius>() - 4usize];
    ["Offset of field: Clay_CornerRadius::topLeft"]
        [::std::mem::offset_of!(Clay_CornerRadius, topLeft) - 0usize];
    ["Offset of field: Clay_CornerRadius::topRight"]
        [::std::mem::offset_of!(Clay_CornerRadius, topRight) - 4usize];
    ["Offset of field: Clay_CornerRadius::bottomLeft"]
        [::std::mem::offset_of!(Clay_CornerRadius, bottomLeft) - 8usize];
    ["Offset of field: Clay_CornerRadius::bottomRight"]
        [::std::mem::offset_of!(Clay_CornerRadius, bottomRight) - 12usize];
};
pub const Clay__ElementConfigType_CLAY__ELEMENT_CONFIG_TYPE_RECTANGLE: Clay__ElementConfigType = 1;
pub const Clay__ElementConfigType_CLAY__ELEMENT_CONFIG_TYPE_BORDER_CONTAINER:
    Clay__ElementConfigType = 2;
pub const Clay__ElementConfigType_CLAY__ELEMENT_CONFIG_TYPE_FLOATING_CONTAINER:
    Clay__ElementConfigType = 4;
pub const Clay__ElementConfigType_CLAY__ELEMENT_CONFIG_TYPE_SCROLL_CONTAINER:
    Clay__ElementConfigType = 8;
pub const Clay__ElementConfigType_CLAY__ELEMENT_CONFIG_TYPE_IMAGE: Clay__ElementConfigType = 16;
pub const Clay__ElementConfigType_CLAY__ELEMENT_CONFIG_TYPE_TEXT: Clay__ElementConfigType = 32;
pub const Clay__ElementConfigType_CLAY__ELEMENT_CONFIG_TYPE_CUSTOM: Clay__ElementConfigType = 64;
pub type Clay__ElementConfigType = ::std::os::raw::c_uchar;
pub const Clay_LayoutDirection_CLAY_LEFT_TO_RIGHT: Clay_LayoutDirection = 0;
pub const Clay_LayoutDirection_CLAY_TOP_TO_BOTTOM: Clay_LayoutDirection = 1;
pub type Clay_LayoutDirection = ::std::os::raw::c_uchar;
pub const Clay_LayoutAlignmentX_CLAY_ALIGN_X_LEFT: Clay_LayoutAlignmentX = 0;
pub const Clay_LayoutAlignmentX_CLAY_ALIGN_X_RIGHT: Clay_LayoutAlignmentX = 1;
pub const Clay_LayoutAlignmentX_CLAY_ALIGN_X_CENTER: Clay_LayoutAlignmentX = 2;
pub type Clay_LayoutAlignmentX = ::std::os::raw::c_uchar;
pub const Clay_LayoutAlignmentY_CLAY_ALIGN_Y_TOP: Clay_LayoutAlignmentY = 0;
pub const Clay_LayoutAlignmentY_CLAY_ALIGN_Y_BOTTOM: Clay_LayoutAlignmentY = 1;
pub const Clay_LayoutAlignmentY_CLAY_ALIGN_Y_CENTER: Clay_LayoutAlignmentY = 2;
pub type Clay_LayoutAlignmentY = ::std::os::raw::c_uchar;
pub const Clay__SizingType_CLAY__SIZING_TYPE_FIT: Clay__SizingType = 0;
pub const Clay__SizingType_CLAY__SIZING_TYPE_GROW: Clay__SizingType = 1;
pub const Clay__SizingType_CLAY__SIZING_TYPE_PERCENT: Clay__SizingType = 2;
pub const Clay__SizingType_CLAY__SIZING_TYPE_FIXED: Clay__SizingType = 3;
pub type Clay__SizingType = ::std::os::raw::c_uchar;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ChildAlignment {
    pub x: Clay_LayoutAlignmentX,
    pub y: Clay_LayoutAlignmentY,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_ChildAlignment"][::std::mem::size_of::<Clay_ChildAlignment>() - 2usize];
    ["Alignment of Clay_ChildAlignment"][::std::mem::align_of::<Clay_ChildAlignment>() - 1usize];
    ["Offset of field: Clay_ChildAlignment::x"]
        [::std::mem::offset_of!(Clay_ChildAlignment, x) - 0usize];
    ["Offset of field: Clay_ChildAlignment::y"]
        [::std::mem::offset_of!(Clay_ChildAlignment, y) - 1usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_SizingMinMax {
    pub min: f32,
    pub max: f32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_SizingMinMax"][::std::mem::size_of::<Clay_SizingMinMax>() - 8usize];
    ["Alignment of Clay_SizingMinMax"][::std::mem::align_of::<Clay_SizingMinMax>() - 4usize];
    ["Offset of field: Clay_SizingMinMax::min"]
        [::std::mem::offset_of!(Clay_SizingMinMax, min) - 0usize];
    ["Offset of field: Clay_SizingMinMax::max"]
        [::std::mem::offset_of!(Clay_SizingMinMax, max) - 4usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Clay_SizingAxis {
    pub __bindgen_anon_1: Clay_SizingAxis__bindgen_ty_1,
    pub type_: Clay__SizingType,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union Clay_SizingAxis__bindgen_ty_1 {
    pub sizeMinMax: Clay_SizingMinMax,
    pub sizePercent: f32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_SizingAxis__bindgen_ty_1"]
        [::std::mem::size_of::<Clay_SizingAxis__bindgen_ty_1>() - 8usize];
    ["Alignment of Clay_SizingAxis__bindgen_ty_1"]
        [::std::mem::align_of::<Clay_SizingAxis__bindgen_ty_1>() - 4usize];
    ["Offset of field: Clay_SizingAxis__bindgen_ty_1::sizeMinMax"]
        [::std::mem::offset_of!(Clay_SizingAxis__bindgen_ty_1, sizeMinMax) - 0usize];
    ["Offset of field: Clay_SizingAxis__bindgen_ty_1::sizePercent"]
        [::std::mem::offset_of!(Clay_SizingAxis__bindgen_ty_1, sizePercent) - 0usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_SizingAxis"][::std::mem::size_of::<Clay_SizingAxis>() - 12usize];
    ["Alignment of Clay_SizingAxis"][::std::mem::align_of::<Clay_SizingAxis>() - 4usize];
    ["Offset of field: Clay_SizingAxis::type_"]
        [::std::mem::offset_of!(Clay_SizingAxis, type_) - 8usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Clay_Sizing {
    pub width: Clay_SizingAxis,
    pub height: Clay_SizingAxis,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_Sizing"][::std::mem::size_of::<Clay_Sizing>() - 24usize];
    ["Alignment of Clay_Sizing"][::std::mem::align_of::<Clay_Sizing>() - 4usize];
    ["Offset of field: Clay_Sizing::width"][::std::mem::offset_of!(Clay_Sizing, width) - 0usize];
    ["Offset of field: Clay_Sizing::height"][::std::mem::offset_of!(Clay_Sizing, height) - 12usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_Padding {
    pub x: u16,
    pub y: u16,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_Padding"][::std::mem::size_of::<Clay_Padding>() - 4usize];
    ["Alignment of Clay_Padding"][::std::mem::align_of::<Clay_Padding>() - 2usize];
    ["Offset of field: Clay_Padding::x"][::std::mem::offset_of!(Clay_Padding, x) - 0usize];
    ["Offset of field: Clay_Padding::y"][::std::mem::offset_of!(Clay_Padding, y) - 2usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Clay_LayoutConfig {
    pub sizing: Clay_Sizing,
    pub padding: Clay_Padding,
    pub childGap: u16,
    pub childAlignment: Clay_ChildAlignment,
    pub layoutDirection: Clay_LayoutDirection,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_LayoutConfig"][::std::mem::size_of::<Clay_LayoutConfig>() - 36usize];
    ["Alignment of Clay_LayoutConfig"][::std::mem::align_of::<Clay_LayoutConfig>() - 4usize];
    ["Offset of field: Clay_LayoutConfig::sizing"]
        [::std::mem::offset_of!(Clay_LayoutConfig, sizing) - 0usize];
    ["Offset of field: Clay_LayoutConfig::padding"]
        [::std::mem::offset_of!(Clay_LayoutConfig, padding) - 24usize];
    ["Offset of field: Clay_LayoutConfig::childGap"]
        [::std::mem::offset_of!(Clay_LayoutConfig, childGap) - 28usize];
    ["Offset of field: Clay_LayoutConfig::childAlignment"]
        [::std::mem::offset_of!(Clay_LayoutConfig, childAlignment) - 30usize];
    ["Offset of field: Clay_LayoutConfig::layoutDirection"]
        [::std::mem::offset_of!(Clay_LayoutConfig, layoutDirection) - 32usize];
};
unsafe extern "C" {
    pub static mut CLAY_LAYOUT_DEFAULT: Clay_LayoutConfig;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_RectangleElementConfig {
    pub color: Clay_Color,
    pub cornerRadius: Clay_CornerRadius,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Clay_RectangleElementConfig"]
        [::std::mem::size_of::<Clay_RectangleElementConfig>() - 32usize];
    ["Alignment of Clay_RectangleElementConfig"]
        [::std::mem::align_of::<Clay_RectangleElementConfig>() - 4usize];
    ["Offset of field: Clay_RectangleElementConfig::color"]
        [::std::mem::offset_of!(Clay_RectangleElementConfig, color) - 0usize];
    ["Offset of field: Clay_RectangleElementConfig::cornerRadius"]
        [::std::mem::offset_of!(Clay_RectangleElementConfig, cornerRadius) - 16usize];
};
pub const Clay_TextElementConfigWrapMode_CLAY_TEXT_WRAP_WORDS: Clay_TextElementConfigWrapMode = 0;
pub const Clay_TextElementConfigWrapMode_CLAY_TEXT_WRAP_NEWLINES: Clay_TextElementConfigWrapMode =
    1;
pub const Clay_TextElementConfigWrapMode_CLAY_TEXT_WRAP_NONE: Clay_TextElementConfigWrapMode = 2;
pub type Clay_TextElementConfigWrapMode = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_TextElementConfig {
    pub textColor: Clay_Color,
    pub fontId: u16,
    pub fontSize: u16,
    pub letterSpacing: u16,
    pub lineHeight: u16,
    pub wrapMode: Clay_TextElementConfigWrapMode,
}
